page heading alignment corrected

--- a/app/components/passcard/MainPage.module.css
+++ b/app/components/passcard/MainPage.module.css
@@ -10,14 +10,13 @@
     background: #F5F6F7;
 
     @media screen and (max-width: 769px) {
-        width: 100%;
-        align-items: flex-start;
+        width: 340px;
+        align-items: center;
     }
 
     .headerContainer {
         display: flex;
         padding-top: 20px;
-        padding-left: 10px;
         width: 1016px;
         flex-direction: column;
         align-items: flex-start;
@@ -27,7 +26,8 @@
 
         @media screen and (max-width: 769px) {
             padding-top: 20px;
-            width: 100%;
+            width: 340px;
+            padding-left: 60px;
         }
 
 
